--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-PUBLIC_WEBSITE_URL=http://localhost:8082
-PORT=8082
-PUBLIC_API_URL=http://localhost:8001/api
-PUBLIC_API_TIMEOUT=30000
-PUBLIC_AUTH_TOKEN_NAME=adminToken
-PUBLIC_AUTH_USERNAME_NAME=adminUsername
-PUBLIC_COOKIE_SECURE=false
-PUBLIC_COOKIE_SAME_SITE=lax
+# ImpulsTrip Admin Dashboard Environment Variables
+# Copy this to .env and adjust the values for your environment
+
+# API Configuration
+PUBLIC_API_URL=https://api.impulstrip.com  # Backend API URL
+
+# Server Configuration
+PORT=8082                      # Port for the admin dashboard
+NODE_ENV=production            # Environment (production, development)
+
+# Security Configuration
+SESSION_SECRET=random_secure_string_replace_this  # For session cookies
