--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@types/marked": "^5.0.2",
     "astro": "^5.7.4",
     "bootstrap": "^5.3.0",
     "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "easymde": "^2.20.0",
     "express": "^4.21.2",
     "helmet": "^7.2.0",
+    "marked": "^15.0.11",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@astrojs/node": "^9.2.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "eslint": "^8.44.0",
@@ -33,7 +39,7 @@
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
     "prettier-plugin-astro": "^0.11.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --fix",
